[package]
name = "generic-ec-ristretto255"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek = { version = "4.1.3", default-features = false, features = ["group", "precomputed-tables", "rand_core", "zeroize"] }
generic-ec-core = { version = "0.2.3", default-features = false }
group = { version = "0.13.0", default-features = false }
rand_core = { version = "0.6.4", default-features = false }
subtle = { version = "2.4.1", default-features = false }
zeroize = { version = "1.8.1", default-features = false, features = ["derive"] }
